<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/formName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_exercise_form_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_name"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_type"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/typeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/typeTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/exercise_type_time" />

            <RadioButton
                android:id="@+id/typeReps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_type_repetitions" />
        </RadioGroup>

        <!-- Поля варианта "по времени" -->
        <EditText
            android:id="@+id/timeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_time"
            android:inputType="text"
            android:autofillHints="" />

        <!-- Поля варианта "по количеству/массе" -->
        <EditText
            android:id="@+id/approachesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_approaches"
            android:inputType="number"
            android:autofillHints=""
            android:visibility="gone" />

        <EditText
            android:id="@+id/repetitionsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_repetitions"
            android:inputType="number"
            android:autofillHints=""
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/weightCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_weight"
            android:visibility="gone" />

        <EditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_weight"
            android:inputType="numberDecimal"
            android:autofillHints=""
            android:visibility="gone" />

        <Button
            android:id="@+id/showButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_show" />
        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_clear" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>